# timetable_bot

./: .gitignore  pyproject.toml  requirements.txt  start.sh
backend/api/: settings.py  urls.py
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_alter_task_comments.py  0003_alter_task_comments.py  0004_alter_task_comments.py  0005_auto_20210817_1903.py  0006_auto_20210820_0956.py  0007_task_status.py  0008_auto_20210821_1319.py  0009_auto_20210822_1419.py  0010_delete_telegramaccount.py  0011_task_last_notify_time.py
frontend/: main.py
frontend/bot_app/: __init__.py  app.py  commands.py  create_task.py  data_tools.py  group_handlers.py  interfaces.py  keyboards.py  menu.py  middlewares.py  notiflicate.py  read_task.py  states.py  tools.py  unknown_handler.py  writing_tools.py
frontend/bot_app/sessions/: 12342651266.session  12482787387.session  session_6283119742596.session  session_6283131122573.session  session_6283132263091.session  session_6283135457771.session  session_6283135530461.session  session_6283135534606.session  session_6283148836313.session  session_6283148839466.session  session_6283165811043.session  session_6283167236153.session  session_6283169447842.session  session_6283169447842.session-journal  session_6283176792275.session  session_6283194281911.session  session_6283802211848.session  session_6283812849187.session  session_6283815630788.session  session_6283873484611.session  session_6285732567809.session  session_6287853501704.session  (+1 more)
frontend/src/: main.py
(+35 files in other folders)
